# Lab3

./: README.md
photos/: CMakeLists.txt  Makefile  README.md  build.bat  build_fixed.bat  compile.bat  run_tests.bat  test_all.bat
photos/src/: bmp.c  bmp.h  cli.c  cli.h  filters.c  filters.h  image.c  image.h  main.c  pipeline.c  pipeline.h
photos/tests/test_scripts/: test.bat
